Enhance reified NonEmpty[List, Set, Map] and expand testing coverage (#18)
* Refactored from the single from(...) method to the wrap(...), from(Collection), and from(Stream) pattern, and updated the related tests

* Tightened up implementations in various collection utils, and further improved testing coverage